test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_contract_abi_decl/src/main.sw
library;

#[storage(invalid)]
#[inline(invalid)]
#[test(invalid)]
//! Invalid inner comment.
#[payable(invalid)]
#[deprecated(invalid)]
#[fallback(invalid)]
#[error_type(invalid)]
#[error(invalid)]
abi Abi {
    #[test(invalid)]
    //! Invalid inner comment.
    #[deprecated(invalid)]
    #[fallback(invalid)]
    #[error(invalid)]
    fn abi_function();
}